proyecto1Compi2/src/proyecto1compi2/compilador.java
/* compilador.java */
/* Generated By:JavaCC: Do not edit this line. compilador.java */
package proyecto1compi2;


import java.io.StringReader;

class compilador implements compiladorConstants {
        public void analizar(String cadena)  throws ParseException {

                try
                {
                        compilador analizador = new compilador(new StringReader(cadena) ) ;
                        analizador.iniciar();
                        System.out.println("Se analizo correctamente ");
                }
                catch(ParseException e)
                {
                        System.out.println(e.getMessage());
                        System.out.println("Analizador: Se han encontrado errores en el analisis.");
                }

        }
        public compilador(){}

  static final public void iniciar() throws ParseException {
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case comentario:
      case comentarioall:{
        ;
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      COMENTARIOS();
    }
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case publico:
    case privado:
    case protegido:{
      VISI();
      break;
      }
    default:
      jj_la1[1] = jj_gen;
      ;
    }
    jj_consume_token(lienzo);
    jj_consume_token(id);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case extiende:{
      EXT();
      break;
      }
    default:
      jj_la1[2] = jj_gen;
      ;
    }
    jj_consume_token(sigabrir);
    SENTENCIAS();
    jj_consume_token(sigcerrar);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case comentario:
      case comentarioall:{
        ;
        break;
        }
      default:
        jj_la1[3] = jj_gen;
        break label_2;
      }
      COMENTARIOS();
    }
    jj_consume_token(0);
  }

  static final public void COMENTARIOS() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case comentario:{
      jj_consume_token(comentario);
      break;
      }
    case comentarioall:{
      jj_consume_token(comentarioall);
      break;
      }
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void VISI() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case publico:{
      jj_consume_token(publico);
      break;
      }
    case privado:{
      jj_consume_token(privado);
      break;
      }
    case protegido:{
      jj_consume_token(protegido);
      break;
      }
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void EXT() throws ParseException {
    jj_consume_token(extiende);
    jj_consume_token(id);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case coma:{
      EXT1();
      break;
      }
    default:
      jj_la1[6] = jj_gen;
      ;
    }
  }

  static final public void EXT1() throws ParseException {
    jj_consume_token(coma);
    jj_consume_token(id);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case coma:{
      EXT1();
      break;
      }
    default:
      jj_la1[7] = jj_gen;
      ;
    }
  }

  static final public void SENTENCIAS() throws ParseException {
    SEN();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case comentario:
    case comentarioall:
    case tentero:
    case tdoble:
    case tcaracter:
    case tboolean:
    case tcadena:
    case conservar:
    case publico:
    case privado:
    case protegido:
    case var:
    case id:{
      SENTENCIAS();
      break;
      }
    default:
      jj_la1[8] = jj_gen;
      ;
    }
  }

  static final public void SEN() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case comentario:{
      jj_consume_token(comentario);
      break;
      }
    case comentarioall:{
      jj_consume_token(comentarioall);
      break;
      }
    case tentero:
    case tdoble:
    case tcaracter:
    case tboolean:
    case tcadena:
    case conservar:
    case publico:
    case privado:
    case protegido:
    case var:
    case id:{
      CONTENIDO();
      break;
      }
    default:
      jj_la1[9] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void CONTENIDO() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case conservar:
    case publico:
    case privado:
    case protegido:
    case var:{
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case conservar:{
        CONSERV();
        break;
        }
      default:
        jj_la1[10] = jj_gen;
        ;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case publico:
      case privado:
      case protegido:{
        VISI();
        break;
        }
      default:
        jj_la1[11] = jj_gen;
        ;
      }
      CONT();
      break;
      }
    case tentero:
    case tdoble:
    case tcaracter:
    case tboolean:
    case tcadena:{
      TIPO();
      jj_consume_token(id);
      jj_consume_token(igual);
      VALOR();
      jj_consume_token(dolar);
      break;
      }
    case id:{
      jj_consume_token(id);
      CONT2();
      break;
      }
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void CONSERV() throws ParseException {
    jj_consume_token(conservar);
  }

  static final public void CONT() throws ParseException {
    DECLARACION();
  }

  static final public void DECLARACION() throws ParseException {
    jj_consume_token(var);
    TIPO();
    NOMBRES();
    jj_consume_token(dolar);
  }

  static final public void TIPO() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case tentero:{
      jj_consume_token(tentero);
      break;
      }
    case tdoble:{
      jj_consume_token(tdoble);
      break;
      }
    case tboolean:{
      jj_consume_token(tboolean);
      break;
      }
    case tcaracter:{
      jj_consume_token(tcaracter);
      break;
      }
    case tcadena:{
      jj_consume_token(tcadena);
      break;
      }
    default:
      jj_la1[13] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void NOMBRES() throws ParseException {
    jj_consume_token(id);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case igual:{
      ASIGN();
      break;
      }
    default:
      jj_la1[14] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case coma:{
      NOM();
      break;
      }
    default:
      jj_la1[15] = jj_gen;
      ;
    }
  }

  static final public void NOM() throws ParseException {
    jj_consume_token(coma);
    jj_consume_token(id);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case igual:{
      ASIGN();
      break;
      }
    default:
      jj_la1[16] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case coma:{
      NOM();
      break;
      }
    default:
      jj_la1[17] = jj_gen;
      ;
    }
  }

  static final public void ASIGN() throws ParseException {
    jj_consume_token(igual);
    VALOR();
  }

  static final public void VALOR() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case entero:{
      jj_consume_token(entero);
      break;
      }
    case doble:{
      jj_consume_token(doble);
      break;
      }
    case booleano:{
      jj_consume_token(booleano);
      break;
      }
    case caracter:{
      jj_consume_token(caracter);
      break;
      }
    case cadena:{
      jj_consume_token(cadena);
      break;
      }
    case id:{
      jj_consume_token(id);
      break;
      }
    default:
      jj_la1[18] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

//----------------no se ha testeado
//----------------CALCULADORA
  static final public void CONT2() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case igual:{
      jj_consume_token(igual);
      VALOR();
      jj_consume_token(dolar);
      break;
      }
    case aumento:{
      jj_consume_token(aumento);
      break;
      }
    case decremento:{
      jj_consume_token(decremento);
      break;
      }
    case sumasim:{
      jj_consume_token(sumasim);
      VALOR();
      break;
      }
    case restasim:{
      jj_consume_token(restasim);
      VALOR();
      break;
      }
    default:
      jj_la1[19] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void C() throws ParseException {
    E();
  }

  static final public void E() throws ParseException {
    T();
    EP();
  }

  static final public void EP() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case mas:
    case menos:{
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case mas:{
        jj_consume_token(mas);
        T();
        EP();
        break;
        }
      case menos:{
        jj_consume_token(menos);
        T();
        EP();
        break;
        }
      default:
        jj_la1[20] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
      }
    default:
      jj_la1[21] = jj_gen;
      ;
    }
  }

  static final public void T() throws ParseException {
    F();
    TP();
  }

  static final public void TP() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case por:
    case div:{
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case por:{
        jj_consume_token(por);
        F();
        TP();
        break;
        }
      case div:{
        jj_consume_token(div);
        F();
        TP();
        break;
        }
      default:
        jj_la1[22] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
      }
    default:
      jj_la1[23] = jj_gen;
      ;
    }
  }

  static final public void F() throws ParseException {
    G();
    FP();
  }

  static final public void FP() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case potencia:{
      jj_consume_token(potencia);
      G();
      FP();
      break;
      }
    default:
      jj_la1[24] = jj_gen;
      ;
    }
  }

  static final public void G() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case entero:{
      jj_consume_token(entero);
      break;
      }
    case doble:{
      jj_consume_token(doble);
      break;
      }
    case booleano:{
      jj_consume_token(booleano);
      break;
      }
    case caracter:{
      jj_consume_token(caracter);
      break;
      }
    case cadena:{
      jj_consume_token(cadena);
      break;
      }
    case id:{
      jj_consume_token(id);
      break;
      }
    case parenti:{
      jj_consume_token(parenti);
      E();
      jj_consume_token(parentd);
      break;
      }
    default:
      jj_la1[25] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

//-----------------RELACIONAL
  static final public void RELACIONAL() throws ParseException {
    A();
  }

  static final public void A() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case entero:
    case doble:
    case booleano:
    case caracter:
    case cadena:
    case parenti:
    case id:{
      EXP();
      REL();
      break;
      }
    case nulo:{
      jj_consume_token(nulo);
      EXP();
      break;
      }
    default:
      jj_la1[26] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void REL() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case igualacion:{
      jj_consume_token(igualacion);
      EXP();
      break;
      }
    case diferenciacion:{
      jj_consume_token(diferenciacion);
      EXP();
      break;
      }
    case menorque:{
      jj_consume_token(menorque);
      EXP();
      break;
      }
    case menorigualque:{
      jj_consume_token(menorigualque);
      EXP();
      break;
      }
    case mayorque:{
      jj_consume_token(mayorque);
      EXP();
      break;
      }
    case mayorigualque:{
      jj_consume_token(mayorigualque);
      EXP();
      break;
      }
    default:
      jj_la1[27] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void EXP() throws ParseException {
    E();
  }

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public compiladorTokenManager token_source;
  static SimpleCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[28];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static private int[] jj_la1_2;
  static {
      jj_la1_init_0();
      jj_la1_init_1();
      jj_la1_init_2();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x1800,0x0,0x0,0x1800,0x1800,0x0,0x0,0x0,0x1f1800,0x1f1800,0x0,0x0,0x1f0000,0x1f0000,0x0,0x0,0x0,0x0,0x7c0,0x0,0x0,0x0,0x0,0x0,0x0,0x7c0,0x80007c0,0x7e00000,};
   }
   private static void jj_la1_init_1() {
      jj_la1_1 = new int[] {0x0,0x7000,0x100,0x0,0x0,0x7000,0x400,0x400,0xf200,0xf200,0x200,0x7000,0xf200,0x0,0x800,0x400,0x800,0x400,0x0,0xf0800,0xc,0xc,0x30,0x30,0x40,0x800000,0x800000,0x0,};
   }
   private static void jj_la1_init_2() {
      jj_la1_2 = new int[] {0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x80000,0x80000,0x0,0x0,0x80000,0x0,0x0,0x0,0x0,0x0,0x80000,0x0,0x0,0x0,0x0,0x0,0x0,0x80000,0x80000,0x0,};
   }

  /** Constructor with InputStream. */
  public compilador(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public compilador(java.io.InputStream stream, String encoding) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser.  ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new compiladorTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 28; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 28; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public compilador(java.io.Reader stream) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new compiladorTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 28; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 28; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public compilador(compiladorTokenManager tm) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 28; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(compiladorTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 28; i++) jj_la1[i] = -1;
  }

  static private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }


/** Get the next Token. */
  static final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  static final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  static private int jj_ntk_f() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  static private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  static private int[] jj_expentry;
  static private int jj_kind = -1;

  /** Generate ParseException. */
  static public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[84];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 28; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
          if ((jj_la1_1[i] & (1<<j)) != 0) {
            la1tokens[32+j] = true;
          }
          if ((jj_la1_2[i] & (1<<j)) != 0) {
            la1tokens[64+j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 84; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  static final public void enable_tracing() {
  }

  /** Disable tracing. */
  static final public void disable_tracing() {
  }

}
